[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common_utils"
version = "0.1.0"
description = "Common utilities shared across multiple projects"
authors = [{ name = "alpost" }]
license = { text = "MIT" }
dependencies = [
    "docker>=7.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas"
]
requires-python = ">=3.13"

[tool.setuptools]
packages = ["common_utils"]